--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,7 @@
     <dimen name="size_radius_button">6dp</dimen>
     <dimen name="width_stroke_button">2dp</dimen>
 
-    <dimen name="size_percent_image_portrait">0.33</dimen>
-    <dimen name="size_percent_image_landscape">0.25</dimen>
-    <dimen name="size_percent_radius_image">0.5</dimen>
+    <dimen name="size_percent_image">0.33</dimen>
 
     <!--  Text size, weight, etc..  -->
 
@@ -13,17 +11,17 @@
     <dimen name="textsize_big">18sp</dimen>
     <dimen name="textsize_big_button">16sp</dimen>
     <dimen name="textsize_medium">14sp</dimen>
-    <dimen name="textsize_small">12sp</dimen>
 
-    <dimen name="weight_font_primary">600</dimen>
-    <dimen name="weight_font_smaller">400</dimen>
+    <item name="weight_font_primary" format="integer" type="dimen">600</item>
+    <item name="weight_font_smaller" format="integer" type="dimen">400</item>
     <dimen name="space_letters">0.15</dimen>
 
     <!-- percents and biases-->
     <dimen name="width_percent_primary">0.9</dimen>
-    <dimen name="width_percent_smaller">0.8</dimen>
 
     <!-- Activity main-->
+    <dimen name="bias_top_view">0</dimen>
+    <dimen name="height_percent_top_view">0.5</dimen>
 
     <dimen name="margin_settings_start">20dp</dimen>
     <dimen name="margin_settings_top">20dp</dimen>
@@ -37,16 +35,10 @@
     <dimen name="alpha_image_view">0.9</dimen>
 
     <dimen name="bias_vertical_user_name">0.3</dimen>
-    <dimen name="bias_vertical_user_job">0.5</dimen>
-
-    <dimen name="bias_vertical_user_address">0.5</dimen>
-    <dimen name="margin_user_address">5dp</dimen>
 
     <dimen name="bias_vertical_social_network_frame">0.4</dimen>
-    <dimen name="width_percent_social_network_frame">0.7</dimen>
 
     <dimen name="height_edit_button">40dp</dimen>
-    <!--    <dimen name="edit_button_height_pressed">60dp</dimen>-->
     <dimen name="margin_edit_button">2dp</dimen>
     <dimen name="bias_vertical_edit_button">0.95</dimen>
 
