--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- default styles for different fontWeights api under 26   -->
     <style name="primary_text_style" parent="@style/TextAppearance.AppCompat" >
         <item name="fontFamily">@font/open_sans_semibold</item>
     </style>
+
     <style name="primary_light_text_style" parent="@style/TextAppearance.AppCompat">
         <item name="fontFamily">@font/open_sans</item>
     </style>
@@ -20,7 +21,7 @@
         <item name="android:textColor">@color/primary_brightest_text_font</item>
     </style>
 
-    <style name="TextAppearance_light_medium_text" parent="primary_text_style">
+    <style name="textAppearance_light_medium_text" parent="primary_text_style">
         <item name ="android:textSize">@dimen/textsize_medium</item>
         <item name="android:textColor">@color/primary_bright_text_font</item>
     </style>
@@ -30,21 +31,21 @@
         <item name="android:letterSpacing">@dimen/space_letters</item>
     </style>
 
-    <style name="TextAppearance_bt_log_out" parent="primary_text_style">
+    <style name="textAppearance_bt_log_out" parent="primary_text_style">
         <item name="android:textColor">@color/primary_bright_text_font</item>
         <item name="android:textSize">@dimen/textsize_medium</item>
     </style>
 
-    <style name="TextAppearance_bt_edit_profile" parent="primary_text_style">
-        <item name="android:textColor">@color/primary_background</item>
+    <style name="textAppearance_bt_edit_profile" parent="primary_text_style">
+        <item name="android:textColor">@color/primary_dark_text_font</item>
         <item name="android:textSize">@dimen/textsize_medium</item>
     </style>
 
-    <style name="TextAppearance_bt_contact" parent="text_big_button_style">
+    <style name="textAppearance_bt_contact" parent="text_big_button_style">
         <item name="android:textColor">@color/the_brightest_font</item>
     </style>
 <!-- style for image frame   -->
-    <style name="ShapeAppearance_image" parent="">
+    <style name="shapeAppearance_image" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
