--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,4 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="size_percent_image">0.25</dimen>
+    <dimen name="width_percent_primary">0.9</dimen>
+
+    <!-- Activity auth -->
+    <dimen name="bias_vertical_auth_acquainted">0.5</dimen>
+    <dimen name="margin_bottom_auth_upper_text">0dp</dimen>
+
+    <dimen name="width_percent_auth_buttons">0.4</dimen>
+
+    <dimen name="bias_vertical_bt_google">0.85</dimen>
+
+    <dimen name="bias_vertical_text_between_buttons">0.5</dimen>
+    <dimen name="bias_vertical_tv_agreement">0.5</dimen>
+    <dimen name="margin_start_tv_sign_in">12dp</dimen>
+    <dimen name="bias_vertical_email_layout">0.55</dimen>
+    <dimen name="bias_horizontal_checkbox">0</dimen>
+    <dimen name="padding_text_textInputEditText">8dp</dimen>
+    <dimen name="margin_error">-10dp</dimen>
+    <dimen name="padding_text_top_textInputEditText">17dp</dimen>
+    <dimen name="padding_text">8dp</dimen>
+    <dimen name="margin_checkbox">4dp</dimen>
+    <dimen name="margin_auth_small">8dp</dimen>
+    <dimen name="margin_bottom">5dp</dimen>
 </resources>
