--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,14 @@
     <color name="social_network_color">#FB5E06</color>
     <color name="button_log_out_stroke_color">#B2B2B3</color>
 
+    <color name="invisible">#00000000</color>
+
     <color name="primary_brightest_text_font">#FAFAFA</color>
     <color name="the_brightest_font">#FFFFFF</color>
     <color name="primary_bright_text_font">#B2B2B3</color>
     <color name="primary_dark_text_font">#18181F</color>
+
+    <color name="error_color">#F93E3E</color>
+    <color name="button_google_background">#FAFAFA</color>
+    <color name="auth_underline">#B2B2B3</color>
 </resources>
