--- a/app/src/main/res/drawable/main_bt_edit.xml
+++ b/app/src/main/res/drawable/main_bt_edit.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/size_radius_button" />
+            <stroke android:width="@dimen/width_stroke_button_log_out_pressed" android:color="@color/primary_background" />
+            <gradient android:angle="90" android:startColor="@color/button_edit_contacts_gradient" android:type="linear" />
+        </shape>
+    </item>
+
     <item>
-    <shape android:shape="rectangle">
-        <corners android:radius="@dimen/size_radius_button" />
-        <stroke android:width="@dimen/width_stroke_button" android:color="@color/primary_background" />
-    </shape>
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/size_radius_button" />
+            <stroke android:width="@dimen/width_stroke_button" android:color="@color/primary_background" />
+        </shape>
     </item>
 </selector>
