--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
 <resources>
     <dimen name="size_radius_button">6dp</dimen>
     <dimen name="width_stroke_button">2dp</dimen>
+    <dimen name="width_stroke_button_log_out_pressed">3dp</dimen>
+
 
     <dimen name="size_percent_image">0.33</dimen>
 
