--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/secondary_background"
     android:theme="@style/Theme.MyApp"
-    tools:context=".MainActivity">
+    tools:context=".screens.main.MainActivity">
 
     <View
         android:id="@+id/ViewMainTopPart"
